(05/08) Javascript no HTML

--- a/01-ola-mundo.html
+++ b/01-ola-mundo.html
@@ -7,6 +7,14 @@
         <title>
             Minha Primeira Página HTML
         </title>
+        
+        <script>
+            // let serve para declarar variavel
+            // nome é uma variavel
+            let nome = prompt('Qual o seu nome?')
+            alert('Olá,!' + nome)
+
+        </script>
     </head>
         <body>
             <h1>Minha Primeira Página HTML</HTML:5></h1>
