--- a/ex01-par-impar.html
+++ b/ex01-par-impar.html
@@ -7,7 +7,7 @@
     <title>Exercício 01</title>
     <script>
 
-    let num = Number(prompt("Informe um número: "))
+    let num = parseInt(prompt("Informe um número inteiro: "))
         if(isNaN(num)) {
                 alert("ERRO: O primeiro valor informado não é um número!")
         }
