(26/08) Teoria dos loops do e do..while

--- a/Ex05-placa-mercosul.html
+++ b/Ex05-placa-mercosul.html
@@ -32,7 +32,7 @@
         let num 
 
          do{
-             num = parseInt(prompt("Informe um dígito de 1 a 9:"))
+             num = prompt("Informe um dígito de 1 a 9:")
          } while(isNaN(num) || num > 9)
 
             switch(num){
