--- a/ex08-for-intervalo.html
+++ b/ex08-for-intervalo.html
@@ -10,6 +10,10 @@
          e  avançando de 3 em 3, imprima com document.write() apenas os
            valores da variável de controle que sejam múltiplos de 7.
         */
+        for(let i = 3 <= 1000; i += 3)
+            
+
+
     </script>
 </head>
 <body>
