--- a/ex09-for-inverso.html
+++ b/ex09-for-inverso.html
@@ -11,6 +11,21 @@
            começando o cálculo pelo próprio número e terminando em 1. 
             Exemplos:  5! = 5 * 4 * 3 * 2 * 1  7! = 7 * 6 * 5 * 4 * 3 * 2 * 1   
         */
+       let num
+
+       do {
+           num = parseInt(prompt("Informe um número inteiro"))
+
+       } while (isNaN(num) || num <=1)
+       let fatorial = 1 
+       for(let i = num; i > 1; 1--){
+            fatorial *= i
+       }
+       document.write(`O fatorial de ${num} é igual a ${fatorial}`)
+
+
+       
+
     </script>
 </head>
 <body>
