--- a/12-formulário-DOM.html
+++ b/12-formulário-DOM.html
@@ -23,6 +23,15 @@
         fieldset label{ /*Labels dentro do fieldset ficam na mesma linha */
             display: inline;
         }
+        #saudação{
+            border: 3px solid navy;
+            padding: 10px;
+            background-color: lightskyblue;
+            text-align: center;
+            border-radius: 10px;
+            }
+
+
     </style>
 </head>
 <body>
@@ -62,5 +71,173 @@
         <label for="feminino">Feminino</label><!--For em label serve para aumentar area de clique-->
 
     </fieldset> 
+
+    <div>
+        <label for="hora-dia">Hora do dia</label>
+        <input id = "hora-dia" type = "number" min = "0" max="23">
+
+        <fieldset>
+            <legend>Opções de Exibição</legend>
+            <input id = "exibir-alert" type="checkbox">
+            <label for="exibir-alert">Exibir com Alert()</label>
+            <br>
+            <input id="exibir-documento" type="checkbox">
+            <label for="exibir-documento">Exibir Documento</label>
+
+        </fieldset>
+    </div>
+
+    <div id="saudacao">
+        <!--Aqui vai aparecer a saudação se a opção "Exibir no Documento"
+        estiver marcada-->
+
+    </div>
+
+    <div>
+        <button id="enviar">Enviar</button>
+    </div>
+
+    <!--  Primeiro nome: Maria 
+         Sobrenome: Catupirina  
+         Forma de tratamento: Excelentíssimo/a 
+         Sexo: Feminino 
+         Hora do dia: 20
+         [X] Exibir com alert() 
+         [X] Exibir no documento  Boa noite, Excelentíssima Maria Catupirina! Como posso ser útil?-->
+
+         <script>
+             const primeiroNome = document.querySelector('#primeiro-nome')
+             const sobrenome = document.querySelector('#sobrenome')
+             const formaTrat = document.querySelector('#formaTrat')
+             const masculino = document.querySelector('#masculino')
+             const feminino = document.querySelector('#feminino')
+
+             const horaDia = document.getElementById('hora-dia')
+             const exibirAlert = document.getElementById('exibir-alert')
+             const exibirDocumento = document.getElementById('exibir-documento')
+             const saudacao= document.getElementById('saudacao')
+             const enviar = document.getElementById('enviar')
+
+
+                //Verifica se todas as informações nescessárias foram
+                //preenchidas no formulário 
+                function validar() {
+
+                    //Primeiro nome
+                    if(primeiroNome.value ==='') {
+                        alert('O primeiro nome precisa ser preenchido.')
+                        primeiroNome.focus()
+                        return false // O formulário  contém erro
+                    }
+                    // Sobrenome
+            if(sobrenome.value === '') {
+                alert('O sobrenome precisa ser preenchido.')
+                sobrenome.focus()
+                return false
+            }
+
+            // Forma de tratamento
+            if(formaTrat.selectedIndex <= 0) {
+                alert('Selecione uma forma de tratamento.')
+                formaTrat.focus()
+                return false
+            }
+
+            // Hora do dia
+            let valHoraDia = parseInt(horaDia.value)
+            if(isNaN(valHoraDia) || valHoraDia < 0 || valHoraDia > 23) {
+                alert('A hora do dia deve ser um valor entre 0 e 23.')
+                horaDia.focus()
+                return false
+            }
+
+            // Opções de exibição
+            if((! exibirAlert.checked) && (! exibirDocumento.checked)) {
+                alert('Pelo menos uma das opções de exibição deve estar marcada.')
+                exibirAlert.focus()
+                return false
+            }
+
+            return true     // O formulário é válido
+
+        }
+
+        function montarSaudacao() {
+            
+            // Só continua se o formulário for válido
+            if(validar()) {
+
+                // Boa noite, Excelentíssima Maria Catupirina! Como posso ser útil?
+
+                let textoSaudacao = ''
+
+                if(horaDia.value < 12) {
+                    textoSaudacao = 'Bom dia, '
+                }
+                else if(horaDia.value < 18) {
+                    textoSaudacao = 'Boa tarde, '
+                }
+                else {
+                    textoSaudacao = 'Boa noite, '
+                }
+
+                switch(formaTrat.selectedIndex) {
+                    case 1:
+                        textoSaudacao += 'Vossa Majestade '
+                        break
+                    case 2:
+                        if(masculino.checked) {
+                            textoSaudacao += 'Excelentíssimo '
+                        }
+                        else {
+                            textoSaudacao += 'Excelentíssima '
+                        }
+                        break
+                    case 3:
+                        if(masculino.checked) {
+                            textoSaudacao += 'Ilustríssimo '
+                        }
+                        else {
+                            textoSaudacao += 'Ilustríssima '
+                        }
+                        break
+                    case 4:
+                        textoSaudacao += 'Vossa Senhoria '
+                        break
+                    case 5:
+                        if(masculino.checked) {
+                            textoSaudacao += 'Senhor '
+                        }
+                        else {
+                            textoSaudacao += 'Senhora '
+                        }
+                        break
+                    default:    // case 6:
+                        if(masculino.checked) {
+                            textoSaudacao += 'Cremosíssimo '
+                        }
+                        else {
+                            textoSaudacao += 'Cremosíssima '
+                        }
+                }
+
+                textoSaudacao += primeiroNome.value + ' ' + sobrenome.value + '! '
+                textoSaudacao += 'Como posso ser útil?'
+
+                if(exibirAlert.checked) {
+                    alert(textoSaudacao)
+                }
+
+                if(exibirDocumento.checked) {
+                    saudacao.textContent = textoSaudacao
+                }
+            }
+        }
+
+        enviar.addEventListener('click', montarSaudacao)
+
+    </script>
+
+
 </body>
 </html>
