--- a/12-formulário-DOM.html
+++ b/12-formulário-DOM.html
@@ -6,130 +6,138 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário DOM</title>
     <style>
-        *{ /* Todos os Elementos */
-            font-family: calibri, Arial, sans;
+        * { /* Todos os elementos */
+            font-family: Calibri, Arial, sans;
         }
-        label{         /* Faz com que o label ocupe uma linha inteira e 
-                        empurre o input para baixo*/
+        label {
+            /* Faz com que o label ocupe uma linha inteira e
+            empurre o input para baixo */
             display: block;
         }
-        div {
+        div, fieldset {
             margin-bottom: 20px;
         }
         fieldset {
-            border: 1px solid slategrey;
-            border-radius: 10px; /*Borda arredondada*/
+            border: 1px solid slategray;
+            border-radius: 10px;    /* Borda arredondada */
         }
-        fieldset label{ /*Labels dentro do fieldset ficam na mesma linha */
+        fieldset label {
+            /* Labels dentro de fieldsets voltam a ser inline */
             display: inline;
         }
-        #saudação{
+        #saudacao {
             border: 3px solid navy;
-            padding: 10px;
+            padding: 10px;  /* Espaçamento interno */
             background-color: lightskyblue;
             text-align: center;
             border-radius: 10px;
-            }
-
-
+        }
     </style>
 </head>
 <body>
-    <h1>Gerador de Saudação</h1>
+    <h1>Gerador de saudação</h1>
+
     <div>
-        <label for="primeiro-nome">Primeiro Nome</label>
-        <input id="primeiro-nome"><!--For em label serve para aumentar area de clique-->
+        <label for="primeiro-nome">Primeiro nome</label>
+        <input id="primeiro-nome">
     </div>
 
     <div>
         <label for="sobrenome">Sobrenome</label>
-        <input id="sobrenome"><!--For em label serve para aumentar area de clique-->
+        <input id="sobrenome">
     </div>
 
     <div>
-        <label for="forma-trat">Forma de Tratamento</label>
-        <select id="forma-trat"> <!--For em label serve para aumentar area de clique-->
+        <label for="forma-trat">Forma de tratamento</label>
+        <select id="forma-trat">
             <option>(Selecione)</option>
             <option>Vossa Majestade</option>
-            <option>Excelentissimo/a</option>
-            <option>Ilustrissimo/a</option>
+            <option>Excelentíssimo/a</option>
+            <option>Ilustríssimo/a</option>
             <option>Vossa Senhoria</option>
             <option>Senhor/ora</option>
-            <option>Cremosissimo/a</option>
+            <option>Cremosíssimo/a</option>
         </select>
     </div>
 
     <fieldset>
+        <!-- Isto é um comentário HTML -->
         <legend>Sexo</legend>
-        <!--Inputs do tipo radio precisam ter o mesmo name
-        para funcionar como um unico conjunto no qual apenas uma opção possa
-        estar marcada ao mesmo tempo-->
-        <input id="masculino" type="radio" name="sexo" checked><!--Checked é para deixar uma opc marcada-->
-        <label for="masculino">Masculino</label> 
+        <!-- Inputs do tipo radio precisam ter o mesmo name
+             para funcionar como um único conjunto no qual
+             apenas uma opção possa estar marcada ao mesmo tempo.
+        -->
+        <input id="masculino" type="radio" name="sexo" checked> 
+        <label for="masculino">Masculino</label>
         <br>
         <input id="feminino" type="radio" name="sexo">
-        <label for="feminino">Feminino</label><!--For em label serve para aumentar area de clique-->
-
-    </fieldset> 
+        <label for="feminino">Feminino</label>
+    </fieldset>
 
     <div>
         <label for="hora-dia">Hora do dia</label>
-        <input id = "hora-dia" type = "number" min = "0" max="23">
-
-        <fieldset>
-            <legend>Opções de Exibição</legend>
-            <input id = "exibir-alert" type="checkbox">
-            <label for="exibir-alert">Exibir com Alert()</label>
-            <br>
-            <input id="exibir-documento" type="checkbox">
-            <label for="exibir-documento">Exibir Documento</label>
-
-        </fieldset>
+        <input id="hora-dia" type="number" min="0" max="23">
     </div>
 
-    <div id="saudacao">
-        <!--Aqui vai aparecer a saudação se a opção "Exibir no Documento"
-        estiver marcada-->
+    <fieldset>
+        <legend>Opções de exibição</legend>
+        <input id="exibir-alert" type="checkbox">
+        <label for="exibir-alert">Exibir com alert()</label>
+        <br>
+        <input id="exibir-documento" type="checkbox">
+        <label for="exibir-documento">Exibir no documento</label>
+    </fieldset>
 
+    <div id="saudacao">
+        <!--
+            Aqui vai aparecer a saudação se a opção "Exibir
+            no documento" estiver marcada
+        -->
     </div>
 
     <div>
         <button id="enviar">Enviar</button>
     </div>
 
-    <!--  Primeiro nome: Maria 
-         Sobrenome: Catupirina  
-         Forma de tratamento: Excelentíssimo/a 
-         Sexo: Feminino 
-         Hora do dia: 20
-         [X] Exibir com alert() 
-         [X] Exibir no documento  Boa noite, Excelentíssima Maria Catupirina! Como posso ser útil?-->
+    <!--
+        Primeiro nome: Maria
+        Sobrenome: Catupirina
+        Forma de tratamento: Excelentíssimo/a
+        Sexo: Feminino
+        Hora do dia: 20
+        [X] Exibir com alert()
+        [X] Exibir no documento
+        
+        Boa noite, Excelentíssima Maria Catupirina! Como posso ser útil?
+    -->
 
-         <script>
-             const primeiroNome = document.querySelector('#primeiro-nome')
-             const sobrenome = document.querySelector('#sobrenome')
-             const formaTrat = document.querySelector('#formaTrat')
-             const masculino = document.querySelector('#masculino')
-             const feminino = document.querySelector('#feminino')
+    <script>
 
-             const horaDia = document.getElementById('hora-dia')
-             const exibirAlert = document.getElementById('exibir-alert')
-             const exibirDocumento = document.getElementById('exibir-documento')
-             const saudacao= document.getElementById('saudacao')
-             const enviar = document.getElementById('enviar')
+        // Capturar os elementos HTML
+        const primeiroNome = document.querySelector('#primeiro-nome')
+        const sobrenome = document.querySelector('#sobrenome')
+        const formaTrat = document.querySelector('#forma-trat')
+        const masculino = document.querySelector('#masculino')
+        const feminino = document.querySelector('#feminino')
 
+        const horaDia = document.getElementById('hora-dia')
+        const exibirAlert = document.getElementById('exibir-alert')
+        const exibirDocumento = document.getElementById('exibir-documento')
+        const saudacao = document.getElementById('saudacao')
+        const enviar = document.getElementById('enviar')
 
-                //Verifica se todas as informações nescessárias foram
-                //preenchidas no formulário 
-                function validar() {
+        // Verifica se todas as informações necessárias foram
+        // preenchidas no formulário
+        function validar() {
 
-                    //Primeiro nome
-                    if(primeiroNome.value ==='') {
-                        alert('O primeiro nome precisa ser preenchido.')
-                        primeiroNome.focus()
-                        return false // O formulário  contém erro
-                    }
-                    // Sobrenome
+            // Primeiro nome
+            if(primeiroNome.value === '') {
+                alert('O primeiro nome precisa ser preenchido.')
+                primeiroNome.focus()
+                return false    // O formulário contém erro
+            }
+
+            // Sobrenome
             if(sobrenome.value === '') {
                 alert('O sobrenome precisa ser preenchido.')
                 sobrenome.focus()
@@ -237,7 +245,6 @@
         enviar.addEventListener('click', montarSaudacao)
 
     </script>
-
-
+    
 </body>
 </html>
